@@ -1,0 +1,4 @@
+<html>
+  <body class="foo" dir="ltr" id="thebody">
+  </body>
+</html>
