@@ -1,0 +1,10 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+  <body>
+    <div id="thebody" class="foo" dir="ltr" title="Body here">
+      <h1>Title</h1>
+      <div id="alpha"></div>
+      <div id="beta"></div>
+    </div>
+  </body>
+</html>
