@@ -1,0 +1,14 @@
+<rules
+    xmlns="http://namespaces.plone.org/diazo"
+    xmlns:css="http://namespaces.plone.org/diazo/css"
+    xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+    >
+    
+    <copy
+        attributes="*"
+        css:theme="div#wrapper"
+        css:content="body"
+        href="include.html"
+        />
+    
+</rules>
