@@ -1,0 +1,9 @@
+<html>
+  <body>
+    <div id="wrapper" class="bar" dir="rtl" title="Body here">
+      <h1>Title</h1>
+      <div id="alpha"></div>
+      <div id="beta"></div>
+    </div>
+  </body>
+</html>
